# rc_yarp_wrapper

./: CMakeLists.txt  README.md
app/conf/: rc_yarp_wrapper.ini
app/script/: ontheflyRecognition_KIA.xml  ontheflyRecognition_KIA_both.xml  ontheflyRecognition_KIA_left.xml  rcCam_skeleton3D.xml
rc_yarp_wrapper/: CMakeLists.txt  main.cpp  rcYarpWrapper.cpp  rcYarpWrapper.h  rcYarpWrapper.thrift  runModule.cpp
test/: CMakeLists.txt  main.cpp
